syntax = "proto3";

option go_package = "get-rates-usdt-grpc-service/protogen/golang/get-rates";

message GetRatesRequest {}

message GetRatesResponse {
  double ask = 1;
  double bid = 2;
  int64 timestamp = 3;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

service RatesService {
  rpc GetRates(GetRatesRequest) returns (GetRatesResponse);
  rpc HealthCheck(HealthCheckRequest) returns(HealthCheckResponse);
}